# serializer version: 1
# name: test_hub
  RitualsGenieHub(
    attribute_values=dict({
      'fanc': '0',
      'fspacenamec': 'Living room',
      'fspacetypec': 'living',
      'ledc': '0',
      'resetc': '0',
      'roomc': '4',
      'roomnamec': 'Woonkamer',
      'speedc': '3',
      'squaremeterc': '20',
    }),
    attributes=dict({
      'fanc': True,
      'fspacenamec': True,
      'fspacetypec': True,
      'ledc': True,
      'roomc': True,
      'roomnamec': True,
      'speedc': True,
      'squaremeterc': True,
    }),
    color='gold',
    device_flow_version=2,
    firmware=RitualsGenieFirmware(
      current=<AwesomeVersion SimpleVer '5.4'>,
      current_id=127,
      newest=<AwesomeVersion SimpleVer '5.4'>,
      newest_id=127,
    ),
    has_schedules=False,
    hash='1111111111111111111111111111111111111111111111111111111111111111',
    hublot='LOT000-00-00000-00001',
    next_fan_change=RitualsGenieNextFanChange(
      current_state='off',
      next_state_change_time=None,
      next_state_change_value=None,
    ),
    sensors=dict({
      'battc': False,
      'fillc': True,
      'rfidc': True,
      'usedc': False,
      'versionc': True,
      'wific': True,
    }),
    status=0,
    timezone='Europe/Amsterdam',
  )
# ---
# name: test_hubs
  list([
    RitualsGenieHub(
      attribute_values=dict({
        'fanc': '0',
        'fspacenamec': 'Living room',
        'fspacetypec': 'living',
        'ledc': '0',
        'resetc': '0',
        'roomc': '4',
        'roomnamec': 'Woonkamer',
        'speedc': '3',
        'squaremeterc': '20',
      }),
      attributes=dict({
        'fanc': True,
        'fspacenamec': True,
        'fspacetypec': True,
        'ledc': True,
        'roomc': True,
        'roomnamec': True,
        'speedc': True,
        'squaremeterc': True,
      }),
      color='gold',
      device_flow_version=2,
      firmware=RitualsGenieFirmware(
        current=<AwesomeVersion SimpleVer '5.4'>,
        current_id=127,
        newest=<AwesomeVersion SimpleVer '5.4'>,
        newest_id=127,
      ),
      has_schedules=False,
      hash='1111111111111111111111111111111111111111111111111111111111111111',
      hublot='LOT000-00-00000-00001',
      next_fan_change=RitualsGenieNextFanChange(
        current_state='off',
        next_state_change_time=None,
        next_state_change_value=None,
      ),
      sensors=dict({
        'battc': False,
        'fillc': True,
        'rfidc': True,
        'usedc': False,
        'versionc': True,
        'wific': True,
      }),
      status=0,
      timezone='Europe/Amsterdam',
    ),
    RitualsGenieHub(
      attribute_values=dict({
        'fanc': '1',
        'fspacenamec': 'Slaapkamer',
        'fspacetypec': 'bedroom',
        'ledc': '0',
        'resetc': '0',
        'roomc': '2',
        'roomnamec': 'Slaapkamer Genie',
        'speedc': '2',
        'squaremeterc': '20',
      }),
      attributes=dict({
        'fanc': True,
        'fspacenamec': True,
        'fspacetypec': True,
        'ledc': True,
        'roomc': True,
        'roomnamec': True,
        'speedc': True,
        'squaremeterc': True,
      }),
      color='gold',
      device_flow_version=2,
      firmware=RitualsGenieFirmware(
        current=<AwesomeVersion SimpleVer '4.2'>,
        current_id=101,
        newest=<AwesomeVersion SimpleVer '5.4'>,
        newest_id=127,
      ),
      has_schedules=True,
      hash='2222222222222222222222222222222222222222222222222222222222222222',
      hublot='LOT000-00-00000-00002',
      next_fan_change=RitualsGenieNextFanChange(
        current_state='on',
        next_state_change_time='17:00',
        next_state_change_value=0,
      ),
      sensors=dict({
        'battc': True,
        'fillc': True,
        'rfidc': True,
        'usedc': False,
        'versionc': False,
        'wific': True,
      }),
      status=1,
      timezone='Europe/Amsterdam',
    ),
  ])
# ---
# name: test_sensors
  RitualsGenieSensors(
    battery=None,
    fill=RitualsGenieSensor(
      description='',
      discover_url='',
      icon='icon-fill.png',
      id=None,
      image='',
      raw='5818',
      scent_found=None,
      title='70-80%',
      value=None,
    ),
    generation=2,
    perfume=RitualsGenieSensor(
      description='',
      discover_url='1115812',
      icon='icon-jasmine.png',
      id=None,
      image='background-jasmine.png',
      raw='05377650',
      scent_found=True,
      title='Private Collection Sweet Jasmine',
      value=None,
    ),
    version=RitualsGenieSensor(
      description='',
      discover_url='',
      icon='',
      id=None,
      image='',
      raw='5.4',
      scent_found=None,
      title='5.4',
      value=None,
    ),
    wifi=RitualsGenieSensor(
      description='',
      discover_url=None,
      icon='icon-signal-75.png',
      id=None,
      image='',
      raw='-80',
      scent_found=None,
      title='Medium',
      value=None,
    ),
  )
# ---
